# think-tank

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  main.py  noxfile.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
tests/: conftest.py  test_arbiter.py  test_schemas.py
think_tank/: arbiter.py  graph.py  schemas.py  state.py
think_tank/agents/: __init__.py  researcher.py  skeptic.py  synthesizer.py  visionary.py
