[project]
name = "think-tank"
version = "0.1.0"
description = "Multi-agent deliberation system using LangGraph for structured debate and convergence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.14.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.1.10",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
